# ambrose

./: Cargo.toml  README.txt  run_isol.sh  run_raspi.sh  run_rodio.sh
songs/: NOTICE.txt  peaceofmind.rs
src/: main.rs  motor.rs  notes.rs  peaceofmind.rs  songbuilder.rs  timer.rs
src/songs/: hallelujah.rs  mod.rs  peaceofmind.rs
