[package]
name = "ambrose"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.20.0", optional = true }
rodio = { version = "0.14.0", optional = true }
rppal = { version = "0.12.0", optional = true }

[features]
raspi = ["nix", "rppal"]
